--- a/home.html
+++ b/home.html
@@ -2,12 +2,19 @@
 
 <html>
     <head>
-        <link rel="shortcut icon" href="wikipedia.ico" type="image/x-icon">
-<title>Hello World</title>
+        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+        <title>Hello World</title>
     </head>
 
 
     <body>
-        Hello World 
+        <div>
+            <h2>Hello World</h2>
+            <p>And welcome!</p>
+        </div>
+
+        <div>
+            <img src="./img/example_homepage_plain.png" alt="preview of Lisa Gringl's website">
+        </div>
     </body>
 </html>
