--- a/contact-form.html
+++ b/contact-form.html
@@ -38,7 +38,7 @@
          <br /><br />
          <label for="message">Your message:</label><br />
          <textarea
-            name="email_message"
+            name="message"
             id="message"
             cols="30"
             rows="10"
