--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
    <head>
       <meta charset="UTF-8" />
@@ -41,7 +42,9 @@
          <a href="mailto:ceberhard@live.de">Contact me</a>
          <div>
             <form action="/contact-form-action" method="post">
-               <label for="name">Name<span style="color:red">*</span></label>
+               <label for="name"
+                  >Name<span style="color:#ee0000">*</span></label
+               >
                <br />
                <input
                   type="text"
@@ -51,7 +54,9 @@
                   required
                />
                <br />
-               <label for="email">Email<span style="color:red">*</span></label>
+               <label for="email"
+                  >Email<span style="color:#ee0000">*</span></label
+               >
                <br />
                <input
                   type="email"
@@ -71,7 +76,7 @@
                />
                <br /><br />
                <label for="message"
-                  >Your message <span style="color:red">*</span></label
+                  >Your message <span style="color:#ee0000">*</span></label
                >
                <br />
                <textarea
@@ -89,10 +94,18 @@
       <footer>
          <div>
             <p>Find me on</p>
-            <img src="./img/github.svg" alt="Github" />
-            <img src="./img/twitter.svg" alt="Twitter" />
-            <img src="./img/linkedin.svg" alt="LinkedIn" />
+            <a href="https://github.com/ChrisDOE7"
+               ><img src="./img/github.svg" alt="Github Profile"
+            /></a>
+            <a href="https://twitter.com/willywonka_NFT"
+               ><img src="./img/twitter.svg" alt="Twitter Profile"
+            /></a>
+            <a
+               href="https://www.linkedin.com/in/christopher-de-oliveira-eberhard-a44267235/"
+               ><img src="./img/linkedin.svg" alt="LinkedIn Profile"
+            /></a>
          </div>
+      </footer>
       <script src="js/tota11y.min.js"></script>
    </body>
 </html>
