--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html lang="en">
    <head>
-      <meta charset="utf-8" />
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Hello World</title>
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
    </head>
@@ -53,15 +55,18 @@
       <footer>
          <div>
             <p>Find me on</p>
-            <img src="./img/github.svg" alt="Github" />
-            <img src="./img/twitter.svg" alt="Twitter" />
-            <img src="./img/linkedin.svg" alt="LinkedIn" />
+            <a href="https://github.com/ChrisDOE7"
+               ><img src="./img/github.svg" alt="Github Profile"
+            /></a>
+            <a href="https://twitter.com/willywonka_NFT"
+               ><img src="./img/twitter.svg" alt="Twitter Profile"
+            /></a>
+            <a
+               href="https://www.linkedin.com/in/christopher-de-oliveira-eberhard-a44267235/"
+               ><img src="./img/linkedin.svg" alt="LinkedIn Profile"
+            /></a>
          </div>
       </footer>
-
-      <!-- <div>
-            <img src="./img/example_homepage_plain.png" alt="preview of Lisa Gringl's website">
-        </div> -->
       <script src="js/tota11y.min.js"></script>
    </body>
 </html>
