--- a/about.html
+++ b/about.html
@@ -7,6 +7,16 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>About</title>
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+      <link
+         rel="stylesheet"
+         type="text/css"
+         href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+      />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+         rel="stylesheet"
+      />
+      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
    </head>
    <body>
       <header>
@@ -15,15 +25,30 @@
             <img src="./img/unknownportal.GIF" alt="logo" />
          </div>
          <nav>
-            <ul role="menubar">
+            <ul role="menubar" class="navigation-list">
                <li role="presentation">
-                  <a href="index.html" role="menuitem">Home</a>
+                  <a
+                     href="index.html"
+                     role="menuitem"
+                     class="navigation-list__item navigation-list__item--active"
+                     >Home</a
+                  >
                </li>
                <li role="presentation">
-                  <a href="about.html" role="menuitem">About Me</a>
+                  <a
+                     href="about.html"
+                     role="menuitem"
+                     class="navigation-list__item"
+                     >About Me</a
+                  >
                </li>
                <li role="presentation">
-                  <a href="./contact.html" role="menuitem">Contact </a>
+                  <a
+                     href="./contact.html"
+                     role="menuitem"
+                     class="navigation-list__item"
+                     >Contact
+                  </a>
                </li>
             </ul>
          </nav>
@@ -35,7 +60,7 @@
                Welcome to my website! I'm Chris and I'm just learning how to
                create stunning web content. A new and exciting topic that I
                would like to explore as soon as possible is the world of
-               automations. In short "bots". Everybody who is often and gladly
+               automations. In short "Bots". Everybody who is often and gladly
                on the web has his certain procedures, which are already
                subconsciously stored in a form of automation. Every interaction
                with the computer that starts from us wastes precious time,
