--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Hello World</title>
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+      <link
+         rel="stylesheet"
+         type="text/css"
+         href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+      />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+         rel="stylesheet"
+      />
+      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
    </head>
    <body>
       <header>
@@ -16,15 +26,30 @@
          </div>
          <div>
             <nav>
-               <ul role="menubar">
+               <ul role="menubar" class="navigation-list">
                   <li role="presentation">
-                     <a href="index.html" role="menuitem">Home</a>
+                     <a
+                        href="index.html"
+                        role="menuitem"
+                        class="navigation-list__item navigation-list__item--active"
+                        >Home</a
+                     >
                   </li>
                   <li role="presentation">
-                     <a href="about.html" role="menuitem">About Me</a>
+                     <a
+                        href="about.html"
+                        role="menuitem"
+                        class="navigation-list__item"
+                        >About Me</a
+                     >
                   </li>
                   <li role="presentation">
-                     <a href="./contact.html" role="menuitem">Contact </a>
+                     <a
+                        href="./contact.html"
+                        role="menuitem"
+                        class="navigation-list__item"
+                        >Contact
+                     </a>
                   </li>
                </ul>
             </nav>
@@ -48,6 +73,10 @@
                developer from Berlin.
             </p>
             <a href="#">Check out some of my code</a>
+         </div>
+         <div>
+            <a href="#">example Link</a>
+            <button type="button">Don't Click</button>
          </div>
 
          <br />
