--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
       </header>
       <main>
          <div>
-            <h1>Who am I:</h1>
+            <h1><u>Who am I:</u></h1>
             <p>
                Welcome to my website! I'm Chris and I'm just learning how to
                create stunning web content. A new and exciting topic that I
@@ -63,60 +63,24 @@
                automations. In short "Bots". Everybody who is often and gladly
                on the web has his certain procedures, which are already
                subconsciously stored in a form of automation. Every interaction
-               with the computer that starts from us wastes precious time,
-               because the human brain first has to absorb the received
-               information, then process it and finally react to it. Let's turn
-               our disadvantage into an advantage and let the machine do the
-               tedious work, so that we ourselves have more time for the
-               important things.
+               with the computer that requires a manual reaction is (for the
+               computer) wasted time, because the human brain first has to
+               absorb the received information, then process it and finally
+               react to it. Let's turn our disadvantage into an advantage and
+               let the machine do some of the tedious work itself, so that we
+               ourselves have more time for the important things.
             </p>
-            <!-- 
-               <p> 
-               My name is Christopher Sean de Oliveira Eberhard and I'm based in
-               Berlin. I am a father of two clever princess and a husband to one
-               phenomenal brazilian.
-               <br />
-               I started my career as a retail salesman at Telekom AG in Germany
-               and was able to gain a lot of valuable experience there.
-               <br />
-               However, I realized very early on that retail wasn't really
-               fulfilling for me, so I ventured into new waters. I quickly found
-               myself in the restaurant business as a bar manager and waiter and
-               was able to live out one of my greatest passions on a different
-               level. Process optimization and customer management.
-               <br />
-               It was an exciting and good time, but even here it becomes
-               increasingly difficult with time and especially with age to
-               discover new opportunities to be able to develop further.
-               <br />
-               It was inevitable that I would take up my childhood hobby again
-               and pursue a career in this field.
-               <br />
-               From an early age I was enthusiastic about computers. At the age
-               of 10, now 36, I got an Amiga from my uncle for my birthday and a
-               new, exciting world opened up in front of me.
-               <br />
-               With two moving boxes full of floppy disks I was busy enough to
-               find out what you could do with such a wonder device of
-               technology. The excitement never waned. Only certain factors
-               distracted me from turning my hobby into a profession.
-               <br />
-               But it's never too late, right? That's why you're reading this
-               little article now, because I decided to become a web developer.
-            </p>
-            -->
          </div>
          <div>
             <table>
                <thead>
                   <tr>
-                     <th>Skills</th>
-                     <th>Years of Experience</th>
-                     <th>Level of Expertise</th>
-                     <th>Additional Information...</th>
+                     <th><u>Skills</u></th>
+                     <th><u>Years of Experience</u></th>
+                     <th><u>Level of Expertise</u></th>
+                     <th><u>Additional Information...</u></th>
                   </tr>
                </thead>
-
                <tbody>
                   <tr>
                      <td>Customer Service</td>
