--- a/about.html
+++ b/about.html
@@ -12,8 +12,10 @@
          type="text/css"
          href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
       />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
-         href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
          rel="stylesheet"
       />
       <link rel="stylesheet" type="text/css" href="./css/styles.css" />
