--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,8 @@
       <header class="page-header">
          <!-- Add your logo here -->
          <img
-            src="./img/unknownportal.GIF"
+            src="./img/logo.png"
+            class="header-logo"
             alt="logo"
             class="page-header__item"
          />
@@ -131,14 +132,15 @@
       <footer class="page-footer">
          <p>Find me on</p>
          <div class="social-media">
-            <a href="https://github.com/ChrisDOE7"
+            <a href="https://github.com/ChrisDOE7" target="_blank"
                ><img src="./img/github.svg" alt="Github Profile"
             /></a>
-            <a href="https://twitter.com/willywonka_NFT"
+            <a href="https://twitter.com/willywonka_NFT" target="_blank"
                ><img src="./img/twitter.svg" alt="Twitter Profile"
             /></a>
             <a
                href="https://www.linkedin.com/in/christopher-de-oliveira-eberhard-a44267235/"
+               target="_blank"
                ><img src="./img/linkedin.svg" alt="LinkedIn Profile"
             /></a>
          </div>
