--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,18 @@
                      >Contact
                   </a>
                </li>
+               <li role="presentation">
+                  <a
+                     href="./bonus-task.html"
+                     role="menuitem"
+                     class="navigation-list__item"
+                     >Bonus-Task
+                  </a>
+               </li>
             </ul>
          </nav>
       </header>
+      <hr />
       <main>
          <div>
             <h1>My Contacts</h1>
@@ -129,6 +138,7 @@
             </form>
          </div>
       </main>
+      <hr />
       <footer class="page-footer">
          <p>Find me on</p>
          <div class="social-media">
