--- a/about.html
+++ b/about.html
@@ -64,9 +64,18 @@
                      >Contact
                   </a>
                </li>
+               <li role="presentation">
+                  <a
+                     href="./bonus-task.html"
+                     role="menuitem"
+                     class="navigation-list__item"
+                     >Bonus-Task
+                  </a>
+               </li>
             </ul>
          </nav>
       </header>
+      <hr />
       <main>
          <div class="centered-article">
             <h1><u>Who am I:</u></h1>
@@ -2514,16 +2523,8 @@
                </tbody>
             </table>
          </div>
-         <!-- <h1>About</h1>
-
-          <p>This page is about myself. This is what I enjoy doing:</p>
-            <ul>
-               <li>Front-end development</li>
-               <li>Back-end development</li>
-               <li>Test driven development</li>
-               <li>Climbing</li>
-            </ul> -->
       </main>
+      <hr />
       <footer class="page-footer">
          <p>Find me on</p>
          <div class="social-media">
