--- a/index.html
+++ b/index.html
@@ -61,9 +61,18 @@
                      >Contact
                   </a>
                </li>
+               <li role="presentation">
+                  <a
+                     href="./bonus-task.html"
+                     role="menuitem"
+                     class="navigation-list__item"
+                     >Bonus-Task
+                  </a>
+               </li>
             </ul>
          </nav>
       </header>
+      <hr />
 
       <main>
          <div class="profile">
@@ -89,7 +98,7 @@
          </div> -->
          <br />
       </main>
-
+      <hr />
       <footer class="page-footer">
          <p>Find me on</p>
          <div class="social-media">
