--- a/work.html
+++ b/work.html
@@ -61,9 +61,18 @@
                      >Contact
                   </a>
                </li>
+               <li role="presentation">
+                  <a
+                     href="./bonus-task.html"
+                     role="menuitem"
+                     class="navigation-list__item"
+                     >Bonus-Task
+                  </a>
+               </li>
             </ul>
          </nav>
       </header>
+      <hr />
       <main>
          <section>
             <h1 class="centered-article">Work</h1>
@@ -125,22 +134,23 @@
                </div>
             </div>
          </section>
-         <footer class="page-footer">
-            <p>Find me on</p>
-            <div class="social-media">
-               <a href="https://github.com/ChrisDOE7" target="_blank"
-                  ><img src="./img/github.svg" alt="Github Profile"
-               /></a>
-               <a href="https://twitter.com/willywonka_NFT" target="_blank"
-                  ><img src="./img/twitter.svg" alt="Twitter Profile"
-               /></a>
-               <a
-                  href="https://www.linkedin.com/in/christopher-de-oliveira-eberhard-a44267235/"
-                  target="_blank"
-                  ><img src="./img/linkedin.svg" alt="LinkedIn Profile"
-               /></a>
-            </div>
-         </footer>
       </main>
+      <hr />
+      <footer class="page-footer">
+         <p>Find me on</p>
+         <div class="social-media">
+            <a href="https://github.com/ChrisDOE7" target="_blank"
+               ><img src="./img/github.svg" alt="Github Profile"
+            /></a>
+            <a href="https://twitter.com/willywonka_NFT" target="_blank"
+               ><img src="./img/twitter.svg" alt="Twitter Profile"
+            /></a>
+            <a
+               href="https://www.linkedin.com/in/christopher-de-oliveira-eberhard-a44267235/"
+               target="_blank"
+               ><img src="./img/linkedin.svg" alt="LinkedIn Profile"
+            /></a>
+         </div>
+      </footer>
    </body>
 </html>
