--- a/about.html
+++ b/about.html
@@ -18,7 +18,11 @@
          href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
          rel="stylesheet"
       />
-      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+      <link
+         rel="stylesheet"
+         type="text/css"
+         href="./css/style.production.css"
+      />
    </head>
    <body>
       <header class="page-header">
