--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,11 @@
          href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
          rel="stylesheet"
       />
-      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+      <link
+         rel="stylesheet"
+         type="text/css"
+         href="./css/style.production.css"
+      />
    </head>
    <body>
       <header class="page-header">
@@ -134,7 +138,7 @@
                   required
                ></textarea>
                <br />
-               <input type="submit" value="Send message" />
+               <input type="submit" value="Send message" class="button" />
             </form>
          </div>
       </main>
