--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
          href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
          rel="stylesheet"
       />
-      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+      <link
+         rel="stylesheet"
+         type="text/css"
+         href="./css/style.production.css"
+      />
    </head>
    <body>
       <header class="page-header">
