many fundamental changes
-deleted "bonus task" folder
-font-color adjustments for better readability
-updated about.html
-added "style.production.css" for postprocessing
-changed titles of all pages
-replaced logo with same w/o bg
-renamed :root properties in css

-further small adjustments

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>About</title>
+      <title>About Myself</title>
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
       <link
          rel="stylesheet"
@@ -83,7 +83,7 @@
       <main>
          <div class="centered-article">
             <h1><u>Who am I:</u></h1>
-            <p>
+            <!-- <p>
                Welcome to my website! I'm Chris and I'm just learning how to
                create stunning web content. A new and exciting topic that I
                would like to explore as soon as possible is the world of
@@ -96,9 +96,37 @@
                react to it. Let's turn our disadvantage into an advantage and
                let the machine do some of the tedious work itself, so that we
                ourselves have more time for the important things.
+            </p> -->
+            <p>
+               Hi, my name is Chris and I'm currently participating at the
+               <a
+                  href="https://careerfoundry.com/en/courses/become-a-web-developer/course-details/"
+                  >CareerFoundry - Full-Stack Web Development Program</a
+               >
+               in Berlin.
+               <br />
+               Working with people always brought joy to me, but working for in
+               the retail branch never really fulfilled me. I've also gained
+               some valuable experience in the gastronomy for quiet some years.
+               <br />
+               <br />
+               <strong
+                  >But now I know who I am and what I want to do!
+                  <br />
+                  And that's to
+                  <span style="background-color:black ;color:orange"
+                     >&#60;code&#62;</span
+                  >
+               </strong>
+               <br />
+               <br />
+               I can tell, there are many areas of application in which I can
+               draw on my entire experience and include my no.1 obsession:
+               Technology!
             </p>
             <a href="files/cv.pdf" class="button" download>Download my CV</a>
          </div>
+
          <div class="berlin-illustration__centered">
             <svg
                id="about-picture"
