--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Contact</title>
+      <title>Get In Touch</title>
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
       <link
          rel="stylesheet"
@@ -94,7 +94,7 @@
          <div>
             <form action="/contact-form-action" method="post">
                <label for="name"
-                  >Name<span style="color:#ee0000">*</span></label
+                  >Name <span style="color:#d90000">*</span></label
                >
                <br />
                <input
@@ -106,7 +106,7 @@
                />
                <br />
                <label for="email"
-                  >Email<span style="color:#ee0000">*</span></label
+                  >Email <span style="color:#d90000">*</span></label
                >
                <br />
                <input
@@ -127,7 +127,7 @@
                />
                <br /><br />
                <label for="message"
-                  >Your message <span style="color:#ee0000">*</span></label
+                  >Your message <span style="color:#d90000">*</span></label
                >
                <br />
                <textarea
