--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Hello World</title>
+      <title>My Portfolio</title>
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
       <link
          rel="stylesheet"
@@ -156,5 +156,6 @@
             /></a>
          </div>
       </footer>
+      <script src="js/tota11y.min.js"></script>
    </body>
 </html>
