--- a/about.html
+++ b/about.html
@@ -29,9 +29,8 @@
          <!-- Add your logo here -->
          <img
             src="./img/logo.png"
-            class="header-logo"
+            class="header-logo page-header__item"
             alt="logo"
-            class="page-header__item"
          />
 
          <nav class="page-header__item">
