rearranged nav; svg: height->length
-move nav to bottom of header for aesthetics;
-switched svg att in about.html from height -> length dt developer tools in chrome expected to see length instead of height.

--- a/about.html
+++ b/about.html
@@ -26,7 +26,6 @@
    </head>
    <body>
       <header class="page-header">
-         <!-- Add your logo here -->
          <img
             src="./img/logo.png"
             class="header-logo page-header__item"
@@ -131,7 +130,7 @@
                id="about-picture"
                xmlns="http://www.w3.org/2000/svg"
                class="berlin-illustration"
-               height="auto"
+               length="auto"
                viewBox="0 0 900 505"
                xmlns:xlink="http://www.w3.org/1999/xlink"
             >
