--- a/index.html
+++ b/index.html
@@ -24,13 +24,8 @@
    </head>
    <body>
       <header class="page-header">
-         <!-- Add your logo here -->
-         <img
-            src="./img/logo.png"
-            class="header-logo page-header__item"
-            alt="logo"
-         />
-         <nav class="page-header__item">
+         <img src="./img/logo.png" class="header-logo" alt="logo" />
+         <nav class="page-header__item page-header__item">
             <ul role="menubar" class="navigation-list">
                <li role="presentation">
                   <a
