--- a/newsletter-confirmation.html
+++ b/newsletter-confirmation.html
@@ -7,6 +7,7 @@
       <title>Newsletter Subscription</title>
       <link rel="stylesheet" href="css/foundation.css" />
       <link rel="stylesheet" href="css/app.css" />
+      <link rel="stylesheet" href="style.production.css" />
    </head>
    <body>
       <div class="grid-container">
