cleaning index.html code

--- a/newsletter-subscription.html
+++ b/newsletter-subscription.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en" dir="ltr">
+
    <head>
       <meta charset="utf-8" />
       <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -9,6 +10,7 @@
       <link rel="stylesheet" href="css/app.css" />
       <link rel="stylesheet" href="style.production.css" />
    </head>
+
    <body>
       <div class="grid-container">
          <div class="grid-x grid-padding-x">
@@ -24,51 +26,32 @@
                      I&rsquo;m stoked you want to subscribe our Newsletter !
                   </h3> -->
                   <h5>
-                     <strong
-                        >Enter your email address & we take care of th
-                        rest!</strong
-                     >
+                     <strong>Enter your email address &amp we take care of th
+                        rest!</strong>
                      <br />
                   </h5>
                   <form>
                      <div class="grid-x grid-padding-x">
                         <div class="large-12 cell">
                            <label>Email:</label>
-                           <input
-                              type="email"
-                              placeholder="Your email address"
-                              class="email-input-field"
-                              requiered
-                           />
+                           <input type="email" placeholder="Your email address" class="email-input-field" requiered />
                         </div>
                      </div>
                      <div class="grid-x grid-padding-x">
                         <div class="large-6 medium-6 cell">
                            <label>Choose Your Prefference</label>
-                           <input
-                              type="radio"
-                              name="pokemon"
-                              value="Red"
-                              id="pokemonRed"
-                           /><label for="pokemonRed">Once A Month</label>
+                           <input type="radio" name="pokemon" value="Red" id="pokemonRed" /><label for="pokemonRed">Once
+                              A Month</label>
                            <br />
-                           <input
-                              type="radio"
-                              name="pokemon"
-                              value="Blue"
-                              id="pokemonBlue"
-                           /><label for="pokemonBlue">Once A Week</label>
+                           <input type="radio" name="pokemon" value="Blue" id="pokemonBlue" /><label
+                              for="pokemonBlue">Once A Week</label>
                            <span>
                               <p class="disclaimer">
                                  By submitting you agree to the
                                  <a href="#">Terms</a> and
                                  <a href="#">Privacy</a>
                               </p>
-                              <a
-                                 href="./newsletter-confirmation.html"
-                                 class="success button"
-                                 >Submit</a
-                              >
+                              <a href="./newsletter-confirmation.html" class="success button">Submit</a>
                            </span>
                         </div>
                      </div>
@@ -110,4 +93,5 @@
       <script src="js/vendor/foundation.js"></script>
       <script src="js/app.js"></script>
    </body>
+
 </html>
